Organized the gitignore file and added more things to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
+# Codegen bits
 node_modules
+lib
+src/codegen
+dist
 build
+
+# Logs
 npm-debug.log
+
+# Filesystem
 .env
 .DS_Store
-dist
+
+# Python compiled files
+*.pyc
+
+# CI files
 gitlab-ci
