--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ before_script:
   - 'eval $(ssh-agent -s)'
   # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
   - 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
-  - 'rm -rf gitlab-ci; git clone --branch v0.0.1 git@gitlab.tableausoftware.com:cloud-connect/gitlab-ci.git'
+  - 'rm -rf gitlab-ci; git clone git@gitlab.tableausoftware.com:cloud-connect/gitlab-ci.git'
+  - 'cd gitlab-ci; echo "Using gitlab-ci branch ${CI_REPO_BRANCH}"; git checkout ${CI_REPO_BRANCH}; cd ..'
   - 'export PATH=${PATH}:${PWD}/gitlab-ci/deploy_scripts'
   - 'before_script.sh'
 
