forcing a build failure to test this in hipchat

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ before_script:
   - 'rm -rf gitlab-ci; git clone git@gitlab.tableausoftware.com:cloud-connect/gitlab-ci.git'
   - 'cd gitlab-ci; echo "Using gitlab-ci branch ${CI_REPO_BRANCH}"; git checkout ${CI_REPO_BRANCH}; cd ..'
   - 'export PATH=${PATH}:${PWD}/gitlab-ci/deploy_scripts'
+  # default to a failed build status in case the EXIT_CODE doesn't populate
+  - 'echo 1 >> ~/${CI_PROJECT_ID}_build_status'
   - 'before_script.sh'
 
 after_script:
