--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "es6-promise": "^4.0.5",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "url-search-params-polyfill": "^1.1.0"
   },
   "devDependencies": {
     "@tableau/localize": "tableau-localize-1.0.0.tgz",
@@ -58,7 +59,9 @@
       "date": [
         {
           "functionName": "formatMediumDate",
-          "formatOptions": { "date": "medium" }
+          "formatOptions": {
+            "date": "medium"
+          }
         }
       ]
     }
