--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "ts": "./node_modules/.bin/tsc --declaration --project src "
   },
   "dependencies": {
-    "es6-promise": "^4.0.5",
-    "isomorphic-fetch": "^2.2.1",
-    "url-polyfill": "^1.0.3",
-    "url-search-params-polyfill": "^1.1.0"
+    "es6-promise": "4.1.0",
+    "isomorphic-fetch": "2.2.1",
+    "url-polyfill": "1.0.3",
+    "url-search-params-polyfill": "1.1.0"
   },
   "devDependencies": {
     "@tableau/localize": "tableau-localize-1.0.0.tgz",
     "@types/enzyme": "2.4.35",
-    "@types/jasmine": "^2.5.37",
-    "@types/lodash": "^4.14.46",
-    "@types/react": "^15.0.9",
-    "@types/react-dom": "^0.14.23",
-    "core-js": "^2.4.1",
+    "@types/jasmine": "2.5.47",
+    "@types/lodash": "4.14.62",
+    "@types/react": "15.0.21",
+    "@types/react-dom": "0.14.23",
+    "core-js": "2.4.1",
     "enzyme": "2.4.1",
     "jasmine-core": "2.5.2",
     "karma": "1.3.0",
@@ -39,18 +39,18 @@
     "karma-mocha-reporter": "2.2.0",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-webpack": "1.8.0",
-    "lodash": "^4.15.0",
-    "mock-promises": "^0.8.0",
+    "lodash": "4.17.4",
+    "mock-promises": "0.8.2",
     "open": "0.0.5",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-dom": "15.4.2",
     "rimraf": "2.5.4",
     "shared-widgets": "http://artifactory/artifactory/api/npm/tab-npm-local/shared-widgets/-/shared-widgets-1.0.1.tgz",
     "source-map-loader": "0.1.5",
-    "ts-loader": "^0.9.5",
+    "ts-loader": "0.9.5",
     "tslint": "3.15.1",
-    "typescript": "^2.1.6",
+    "typescript": "2.2.2",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.1"
   },
