--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ before_script:
   - 'eval $(ssh-agent -s)'
   # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
   - 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
+  - 'npm config set registry http://artifactory/artifactory/api/npm/tab-npm'
   - 'rm -rf gitlab-ci; git clone git@gitlab.tableausoftware.com:cloud-connect/gitlab-ci.git'
   - 'cd gitlab-ci; echo "Using gitlab-ci branch ${CI_REPO_BRANCH}"; git checkout ${CI_REPO_BRANCH}; cd ..'
   - 'export PATH=${PATH}:${PWD}/gitlab-ci/deploy_scripts'
