--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url-search-params-polyfill": "1.1.0"
   },
   "devDependencies": {
-    "@tableau/localize": "2.0.3",
+    "@tableau/localize": "http://artifactory/artifactory/api/npm/tab-npm-local/@tableau/localize/-/@tableau/localize-2.0.3.tgz",
     "@types/enzyme": "2.4.35",
     "@types/jasmine": "2.5.47",
     "@types/lodash": "4.14.62",
