--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ts": "./node_modules/.bin/tsc --declaration --project src "
   },
   "dependencies": {
+    "@types/fetch-mock": "5.8.2",
     "es6-promise": "4.1.0",
     "isomorphic-fetch": "2.2.1",
     "url-polyfill": "1.0.3"
@@ -31,6 +32,7 @@
     "@types/react-dom": "0.14.23",
     "core-js": "2.4.1",
     "enzyme": "2.4.1",
+    "fetch-mock": "5.10.0",
     "jasmine-core": "2.5.2",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
